kubernetes/apps/truenas/overlays/workload-prd/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: truenas
  namespace: truenas
spec:
  parentRefs:
    - name: external-services
      namespace: external-gateway
      sectionName: https-truenas
  hostnames:
    - "truenas.yuriykovalchuk.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: truenas
          port: 80
